<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cards">

    <androidx.cardview.widget.CardView
        android:id="@+id/birdCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/txt_birdComName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bird_name"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txt_birdsSciName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/species"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txt_birdHowMany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_many"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txt_birdLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_StreetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/street_name"
                android:textColor="@color/black"
                android:textSize="18sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
