<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background_colour"
    app:flow_verticalAlign="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_marginTop="200dp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/white_btn"
        android:text="@string/log_in"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/white_btn"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>